--- a/register.html
+++ b/register.html
@@ -62,7 +62,7 @@ return true;
 </script>
 <body>
     <center>
-        <form name="frm" method="POST" action="success.html" onSubmit="return validite()"></form>
+        <form name="frm" method="POST" action="welcome.html" onSubmit="return validite()"></form>
             <fieldset align="center">
                 <table align="center">
                     <tr><td>First Name:</td>
